# RoboticSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  Installation instructions.txt  README.md  dep.txt  dependencies.txt  main.cpp  main.cpp.orig  using static libs.txt
CS_GUI/: CS_GUI.sln
Python scripts/: 2joints solution.py  CompitabilityObjective.py  IKObjective.py  Kinematics.py  Minimizers.py  Objectives.py  POC in 2D.py  Playground.py  ThesisMinimizer.py  Types.py  Visualisation.py  finding m problem.py  imports workaround.py  math_utils.py  plot.py  recieve.py  send.py  test_FK_2.py  test_IK_4_Newthon.py  visual simulator.py
include/: AbstractRBEngine.h  AutoDiff.h  BFGSFunctionMinimizer.h  BFGSHessianApproximator.h  BallAndSocketJoint.h  BodyFrame.h  CloseToPointObjective.h  CollisionDetectionPrimitive.h  CollisionObjective.h  ContactForce.h  DraggableSphere.h  EqualDistributionObjective.h  FinishAtLastObjective.h  FixedJoint.h  GeneralizedCoordinatesRobotRepresentation.h  GenericLimb.h  GetToCartPoint.h  GradientBasedFunctionMinimizer.h  GradientDescentFunctionMinimizer.h  HingeJoint.h  IK_EndEffectorsObjective.h  IK_EnergyFunction.h  IK_Optimizer.h  IK_Plan.h  IK_RobotStateRegularizer.h  IK_Solver.h  Joint.h  MathLib.h  Matrix.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h  ObjectiveSum.h  Quaternion.h  RBEngine.h  RBProperties.h  RBState.h  RBUtils.h  RSApp.h  RigidBody.h  Robot.h  (+10 more)
src/: AbstractRBEngine.cpp  BFGSFunctionMinimizer.cpp  BFGSHessianApproximator.cpp  BallAndSocketJoint.cpp  BodyFrame.cpp  CloseToPointObjective.cpp  CollisionDetectionPrimitive.cpp  CollisionObjective.cpp  DraggableSpehere.cpp  DraggableSphere.cpp  EqualDistributionObjective.cpp  FinishAtLastObjective.cpp  GeneralizedCoordinatesRobotRepresentation.cpp  GenericLimb.cpp  GetToCartPoint.cpp  GradientBasedFunctionMinimizer.cpp  GradientDescentFunctionMinimizer.cpp  HingeJoint.cpp  IK_EndEffectorsObjective.cpp  IK_EnergyFunction.cpp  IK_Optimizer.cpp  IK_Plan.cpp  IK_RobotStateRegularizer.cpp  IK_Solver.cpp  Joint.cpp  Logger.cpp  NewtonFunctionMinimizer.cpp  (+27 more)
(+34 files in other folders)
